--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DBExample</string>
     <string name="add">Add</string>
     <string name="names">Names</string>
+    <string name="entre_name">Enter a name</string>
 </resources>
